--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,31 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon_vesi"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/icon_vesi"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MyRequestsActivity"></activity>
-        <activity android:name=".BookConsultationActivity"></activity>
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity android:name=".MyRequestsActivity" />
+        <activity android:name=".BookConsultationActivity" />
+        <activity android:name=".ShowTimeActivity" />
+        <activity android:name=".ShowDateActivity" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="com.example.intent.action.showdate" />
+                <action android:name="com.example.intent.action.showtime" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
